// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named APPLICATION_ID 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: APPLICATION_ID",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_API_KEY 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_API_KEY",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_API_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_API_URL",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_APP_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_APP_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_APP_APPLICATION_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_APP_APPLICATION_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_FUNCTIONS_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_FUNCTIONS_URL",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named APPLICATION_ID 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: APPLICATION_ID",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_API_KEY 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_API_KEY",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_API_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_API_URL",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_APP_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_APP_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_APP_APPLICATION_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_APP_APPLICATION_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_FUNCTIONS_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Variable names are reserved: TWENTY_FUNCTIONS_URL",
  "name": "UserInputError",
}
`;
